--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
 log = { version = "0.4.22" }
 esp-alloc = { version = "0.5.0" }
 embedded-hal = { version = "1.0.0" }
+embedded-sdmmc = "0.8.0"
+const-lru = "1.0.0"
+gb-core = { path = "C:\\Users\\pablo\\projects\\rust-gb\\gb-core" }
 #Graphics stack
 display-interface = "0.5.0"
 display-interface-spi = "0.5.0"
@@ -25,7 +28,9 @@ ili9341 = { version = "0.6.0", features = [
     "embedded-graphics-core",
     "graphics",
 ], default-features = false }
-
+num-traits = { version = "0.2.19", default-features = false, features = [
+    "libm",
+] }
 embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
 # We aren't using this, but embedded-hal-bus 0.2 unconditionally requires atomics.
 # Should be fixed in e-h-b 0.3 via https://github.com/rust-embedded/embedded-hal/pull/607
